# lite-interpreter

./: .env.example  .gitignore  AGENTS.md  DESIGN.md  Makefile  README.md  directory.txt  docker-compose.yml  litellm_config.yml  pyproject.toml  requirements.txt  项目二.md
config/: analysis_runtime.yaml  deerflow_sidecar.yaml  graph_lexicon.yaml  harness_policy.yaml  sandbox_config.py  security_config.py  settings.py
docs/: PRD.md  README.md  SDD.md  architecture.md  code_tour.md  deerflow_integration.md  deployment.md  development_guide.md  future_roadmap.md  interview_narrative.md  openharness_adaptation_plan.md  project_plan.md  project_status.md  runtime_support_matrix.md  strict_state_whitelist.md  testing.md  user_guide.md  架构设计文档.md
scripts/: audit_local_residue.py  check_hybrid_readiness.py  create_analysis.py  create_task.py  demo_task_trace.py  run_deerflow_sidecar.py  smoke_dashscope_litellm.py  smoke_deerflow_bridge.py
tests/: conftest.py  test_analysis_runtime.py  test_api_app.py  test_api_audit.py  test_api_auth.py  test_api_diagnostics.py  test_api_execution.py  test_api_memory.py  test_api_policy.py  test_api_route_surface.py  test_api_runtime.py  test_api_sse.py  test_api_upload.py  test_ast_auditor.py  test_blackboard.py  test_dag_engine.py  test_deerflow_bridge.py  test_deerflow_sidecar.py  test_docs_consistency.py  test_dynamic_runtime.py  test_e2e.py  test_eval_runner.py  test_frontend_stream.py  test_frontend_task_console.py  test_guidance_runner.py  test_harness.py  test_kag.py  test_kag_compiler.py  test_llm_client.py  test_mcp_gateway.py  (+8 more)
(+233 files in other folders)
