[project]
name = "lite-interpreter"
version = "0.1.0"
description = "Production-oriented data intelligence agent runtime prototype"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "langgraph>=1.1.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
filterwarnings = [
  "ignore:datetime.datetime.utcfromtimestamp\\(\\) is deprecated and scheduled for removal:DeprecationWarning:dateutil\\.tz\\.tz",
]

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["src", "tests", "scripts", "config"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/kag/compiler/generated/*.py" = ["F401", "F403", "F405", "I001", "UP009", "UP025", "UP035"]

[tool.black]
line-length = 120
target-version = ["py312"]
